[gd_scene load_steps=7 format=3 uid="uid://dmiy4mretoxvf"]

[ext_resource type="Script" path="res://dialog_module/content/dialog/recive_dialog_line.gd" id="1_g74j4"]
[ext_resource type="Texture2D" uid="uid://o5u0rsk5oepc" path="res://dialog_module/resource/kenney_assets/cursors/Basic/Default/message_dots_square.png" id="2_6bovh"]
[ext_resource type="Texture2D" uid="uid://blaketae1m3wo" path="res://dialog_module/resource/kenney_assets/cursors/Basic/Default/navigation_w.png" id="3_ne2ah"]

[sub_resource type="Animation" id="Animation_040ry"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/IconTypeDialog:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_s7bhx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/IconTypeDialog:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_swrk5"]
_data = {
"RESET": SubResource("Animation_s7bhx"),
"show": SubResource("Animation_040ry")
}

[node name="ReciveDialogLine" type="MarginContainer"]
offset_right = 357.0
offset_bottom = 33.0
script = ExtResource("1_g74j4")

[node name="Button" type="Button" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IconTypeDialog" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_6bovh")
expand_mode = 3

[node name="Text" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[rainbow]Hello[/rainbow]  [b]world[/b]"
fit_content = true
scroll_active = false

[node name="Selected" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_ne2ah")
expand_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_swrk5")
}
autoplay = "RESET"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
